# npack

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  git.rs  lib.rs  main.rs  package.rs  task.rs  utils.rs
src/cmd/: config.rs  generate.rs  install.rs  list.rs  move_cmd.rs  uninstall.rs  update.rs
