[package]
name = "pack"
version = "0.2.7"
authors = ["maralla <maralla.ai@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
yaml-rust = "0.4"
walkdir = "2"
termion = "2.0"
num_cpus = "1.0"
clap = "2.34"
dirs = "4.0"
signal-hook = "0.3"
libc = "0.2"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
simple-logging = "2.0.2"
log = "0.4.17"
thiserror = "1.0"

[dependencies.git2]
version = "0.15"
default-features = false
features = ["ssh", "https"]
